# wasm4pm-compat

./: .gitignore  AGENT_5_DELIVERABLES.txt  AGENT_5_DELIVERY_MANIFEST.txt  AGENT_5_FINAL_ALIVE_STATUS.md  AUDIT_SUMMARY_REPORT.md  CHANGELOG.md  CLAUDE.md  CONSTRUCT8_PROJECT_CONTRACTS.md  Cargo.toml  DAY3_WASM4PM_COMPAT_TO_WASM4PM_YIELD.md  DOC_COVERAGE_LOG.md  FINAL_PARTIAL_ALIVE_001.md  GAP_007_CLOSURE_RECEIPT.md  GGEN_ECOSYSTEM_INTEL_PARTIAL_001.md  Justfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  NIGHTLY_TYPE_LAW.md  OCEL_AUDIT_REPORT.md  ORIGINAL_REQUEST.md  README.md  SECURITY.md  WASM4PM-COMPAT-PRD-ARD.md  anti-llm.toml  cicd.toml  clippy.toml  doc_warnings.txt  doc_warnings2.txt  doc_warnings3.txt  final-audit-report.md  ggen-witness.toml  object_lifecycle_phases  object_lifecycle_valid_chain  petri_wfnet_soundness_states_distinct  process_cube_shape  progress.md  roundtrip_simulation.js  rust-toolchain.toml  settings-hooks-exhaustive.md  (+2 more)
c8-adversary/: Cargo.toml
c8-adversary/src/: lib.rs
c8-instruments/: Cargo.toml
c8-instruments/src/: lib.rs
c8-market/: Cargo.toml  README.md
c8-market/src/: lib.rs
c8-receipts/: Cargo.toml
c8-receipts/src/: chain.rs  hash.rs  implementation.rs  lib.rs  proof.rs  receipt.rs  verdict.rs
wasm4pm-compat-lsp/: Cargo.toml
wasm4pm-compat-lsp/src/: actions.rs  lib.rs  main.rs
wasm4pm-compat-lsp/src/rules/: admission.rs  lifecycle.rs  mod.rs  witness.rs
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/anstream-da64b4230195a6c8/: lib-anstream  lib-anstream.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/anstyle-001e7546fd8614f1/: lib-anstyle.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/anstyle-parse-babc3521584d992f/: lib-anstyle_parse
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/async-trait-40ca706ded8cf913/: lib-async_trait  lib-async_trait.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/auto_impl-04bbb3d71d407cbe/: lib-auto_impl  lib-auto_impl.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/bytes-18e006abde067491/: lib-bytes.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/cfg-if-07c99846f1182c10/: lib-cfg_if.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/clap-c1dd60d700fe4e24/: lib-clap  lib-clap.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/clap_builder-32bc1eaaf3a75290/: lib-clap_builder  lib-clap_builder.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/clap_derive-188646989395afaf/: lib-clap_derive  lib-clap_derive.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/clap_lex-b2cb9b4f8bb60770/: lib-clap_lex.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/colorchoice-4f3276570fc2bc06/: lib-colorchoice  lib-colorchoice.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/displaydoc-f2cba42780b75c6d/: lib-displaydoc  lib-displaydoc.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/errno-76b6ef718c16e616/: lib-errno.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/form_urlencoded-7445a4cc2b645b51/: lib-form_urlencoded.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-b6c4dc6a72c0d9e4/: lib-futures  lib-futures.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-channel-a3ca268f7e40a511/: lib-futures_channel.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-core-bfacb61159e93b78/: lib-futures_core
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-io-1aa59513945a2275/: lib-futures_io
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-macro-cfa47f2de62eaa0e/: lib-futures_macro  lib-futures_macro.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-sink-b357f1694dfce1b2/: lib-futures_sink.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-task-7dab08fd360df08e/: lib-futures_task.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/futures-util-bc2b6932a88c6eed/: lib-futures_util  lib-futures_util.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/httparse-0e9fab556336abef/: build-script-build-script-build.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/httparse-967c0c148a61fce3/: lib-httparse.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/httparse-97bff5a2a2c83198/: run-build-script-build-script-build.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_collections-6a6c970292e300f8/: lib-icu_collections  lib-icu_collections.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_locale_core-6d9640ae9999a70d/: lib-icu_locale_core  lib-icu_locale_core.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_normalizer-a12dfdccc7f71315/: lib-icu_normalizer  lib-icu_normalizer.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_normalizer_data-5549503628a48e03/: build-script-build-script-build
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_normalizer_data-9ffd58641fb88bc2/: run-build-script-build-script-build.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_normalizer_data-dad2b0779106c547/: lib-icu_normalizer_data.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_properties-5ee310b61c02ad97/: lib-icu_properties  lib-icu_properties.json
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_properties_data-58ddd63ccdf396d7/: run-build-script-build-script-build
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_properties_data-69836b300865469c/: lib-icu_properties_data
wasm4pm-compat-lsp/target_lsp/debug/.fingerprint/icu_provider-af43be846bfe01bb/: lib-icu_provider  (+1 more)
wasm4pm-compat-ts/: Cargo.toml  README.md  index.ts  package.json  tsconfig.json
wasm4pm-compat-ts/bindings/: zod_schemas.ts
wasm4pm-compat-ts/src/: lib.rs
wasm4pm-compat-ts/test/: conformance-result.test.ts
wasm4pm-compat-ts/zod_integration/: README.md  REAL_DATA.md  complex_models_demo.ts  comprehensive_demo.ts  index.ts  main.ts  package-lock.json  package.json  real_data_test.ts  sample_eventlog.json  sample_ocel.json  tsconfig.json  validate_external.ts  validate_log.ts  zod_schemas.ts
wasm4pm-compat-ts/zod_integration/data/: ocel.json  ocpq_valid.json  petri_net.json  traces.json
(+1982 files in other folders)
