[package]
name = "wasm4pm-compat"
version = "0.1.0"
edition = "2021"
description = "Minimal paper-complete, feature-capped Rust process-evidence crate. Start with compatibility. Graduate to execution."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasm4pm/wasm4pm-compat"
keywords = ["process-mining", "ocel", "event-log", "evidence", "conformance"]
categories = ["science", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]
# Doctests require per-doctest nightly feature flags (generic_const_exprs,
# adt_const_params) that don't propagate from the crate root. Running them
# as the default incurs 200+ separate rustc invocations on a nightly compiler.
# Use `cargo test --doc --all-features` as an explicit opt-in gate.
doctest = false

[features]
default = ["formats"]

# formats: Import/export contracts, round-trip claims, and loss surfaces.
formats = []

# strict: Opt-in boundary judgment with stricter admission/refusal surfaces.
strict = []

# ts: Expose TypeScript law projection for browsers.
ts = [
  "dep:specta",
  "dep:serde",
  "dep:tsify",
  "dep:wasm-bindgen",
]

# wasm: Expose WASM-safe boundary projection and validations.
wasm = [
  "dep:wasm-bindgen",
  "dep:serde-wasm-bindgen",
  "dep:tsify",
  "dep:serde",
  "dep:specta",
]

# wasm4pm: Graduation bridge to engine-facing contracts.
wasm4pm = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
specta = { version = "1.0.5", optional = true }
tsify = { version = "0.4.5", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "zero_cost_types"
harness = false

[[bench]]
name = "law_bounds_bench"
harness = false

[[bench]]
name = "evidence_lifecycle_bench"
harness = false

[[bench]]
name = "id_operations_bench"
harness = false
