[package]
name = "wasm4pm-compat"
version = "26.6.4"
edition = "2021"
description = "Minimal paper-complete, feature-capped Rust process-evidence crate. Start with compatibility. Graduate to execution."
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/wasm4pm-compat"
keywords = ["process-mining", "ocel", "event-log", "evidence", "conformance"]
categories = ["science", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/wasm4pm-compat"
exclude = [
  ".ggen/**",
  "ggen/**",
  "checkpoints/**",
  "AGENT_*",
  "AGENT_REPORTS/**",
  ".DS_Store",
  "docs/.DS_Store",
  "Cargo.lock",
  "c8-adversary/**",
  "emitted/**",
]

[lib]
crate-type = ["rlib"]
# Doctests require per-doctest nightly feature flags (generic_const_exprs,
# adt_const_params) that don't propagate from the crate root. Running them
# as the default incurs 200+ separate rustc invocations on a nightly compiler.
# Use `cargo test --doc --all-features` as an explicit opt-in gate.
doctest = false

[features]
default = ["formats"]

# formats: Import/export contracts, round-trip claims, and loss surfaces.
formats = []

# strict: Opt-in boundary judgment with stricter admission/refusal surfaces.
strict = []

# wasm4pm: Graduation bridge to engine-facing contracts.
wasm4pm = []

[dependencies]

[dev-dependencies]
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "zero_cost_types"
harness = false

[[bench]]
name = "law_bounds_bench"
harness = false

[[bench]]
name = "evidence_lifecycle_bench"
harness = false

[[bench]]
name = "id_operations_bench"
harness = false
