[package]
name = "wasm4pm-compat"
version = "26.6.11"
edition = "2021"
description = "Minimal paper-complete, feature-capped Rust process-evidence crate. Start with compatibility. Graduate to execution."
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/wasm4pm-compat"
keywords = ["process-mining", "ocel", "event-log", "evidence", "conformance"]
categories = ["science", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/wasm4pm-compat"
exclude = [
  ".ggen/**",
  "ggen/**",
  "checkpoints/**",
  "AGENT_*",
  "AGENT_REPORTS/**",
  ".DS_Store",
  "docs/.DS_Store",
  "Cargo.lock",
  "c8-adversary/**",
  "emitted/**",
  "archive/**",
  "doc_warnings*.txt",
  "output.log",
  "progress.md",
  "roundtrip_simulation.js",
  "settings-hooks-exhaustive.md",
  "conformance_verdict_is_perfect",
  "DAY3_*.md",
  "FINAL_PARTIAL_*.md",
  "OCEL_AUDIT_REPORT.md",
  "GGEN_ECOSYSTEM_*.md",
  "CONSTRUCT8_PROJECT_CONTRACTS.md",
  "WASM4PM-COMPAT-PRD-ARD.md",
  "GAP_007_*.md",
  "ORIGINAL_REQUEST.md",
  "NIGHTLY_TYPE_LAW.md",
  "final-audit-report.md",
  "libmod.rlib",
  "librust_out.rlib",
  "c8-market/**",
  "c8-time/**",
  "c8-instruments/**",
  "c8-receipts/**",
  "adapters/**",
  "receipts/**",
  "wip/**",
  "paper/**",
  "phd-thesis/**",
  "python/**",
  "research/**",
  "examples/illustrative/**",
  "bindings/**",
  "wasm4pm-compat-ts/**",
  "**/node_modules/**",
  "**/*.backup",
]

[lib]
crate-type = ["rlib"]
# Doctests require per-doctest nightly feature flags (generic_const_exprs,
# adt_const_params) that don't propagate from the crate root. Running them
# as the default incurs 200+ separate rustc invocations on a nightly compiler.
# Use `cargo test --doc --all-features` as an explicit opt-in gate.
doctest = false

[features]
default = ["formats"]

# formats: Import/export contracts, round-trip claims, and loss surfaces.
formats = []

# strict: Opt-in boundary judgment with stricter admission/refusal surfaces.
strict = []

# wasm4pm: Graduation bridge to engine-facing contracts.
wasm4pm = []

# NOTE: TypeScript binding generation lives in the `wasm4pm-compat-ts` sidecar
# crate, NOT here. A `ts`/specta feature in this crate would be a fourth public
# feature and an (optional) runtime dependency — both violate the invariants
# "exactly three public Cargo features" and "no runtime dependencies". The
# sidecar depends on this crate and owns all specta/zod surface.

[dependencies]
quick-xml = "0.36.0"

blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.2", features = ["v4", "serde", "js"] }
hashbrown = "0.17.1"
rustc-hash = "2"

[dev-dependencies]
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "zero_cost_types"
harness = false

[[bench]]
name = "law_bounds_bench"
harness = false

[[bench]]
name = "evidence_lifecycle_bench"
harness = false

[[bench]]
name = "id_operations_bench"
harness = false

[workspace]
members = [
    ".",
]
exclude = [
    "target",
    # TS sidecar: own deps (specta) and release cadence — built standalone, not
    # as part of the core workspace.
    "wasm4pm-compat-ts",
    # LSP: separate tool at its own version (26.6.9); its external `lsp-max`
    # dependency currently fails a naive workspace build (E0432). It does not
    # gate the core crate release — build it with `-p wasm4pm-compat-lsp`.
    "wasm4pm-compat-lsp",
]
resolver = "2"


