[package]
name = "c8-adversary"
version = "26.6.9"
edition = "2021"
description = "Adversarial game theory for market structure: logic players, graph players, prophecy illusions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasm4pm/wasm4pm-compat"

[dependencies]
c8-time = { path = "../c8-time", version = "26.6.9" }
c8-market = { path = "../c8-market", version = "26.6.9" }
c8-instruments = { path = "../c8-instruments", version = "26.6.9" }

[dev-dependencies]

[workspace]

