[package]
name = "c8-market"
version = "0.1.0"
edition = "2021"
description = "Market Planck cells: instrument-venue-relation quantization at causal + monotonic time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasm4pm/wasm4pm-compat"

[dependencies]
c8-time = { path = "../c8-time" }

[dev-dependencies]
