[package]
name = "c8-market"
version = "26.6.23"
edition = "2021"
description = "Market Planck cells: instrument-venue-relation quantization at causal + monotonic time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasm4pm/wasm4pm-compat"

[dependencies]
c8-time = { path = "../c8-time", version = "26.6.23" }

[dev-dependencies]

[workspace]
