[package]
name = "c8-receipts"
version = "26.6.23"
edition = "2021"
description = "Receipt, proof, and integrity sealing for Construct8 market physics"
license = "MIT OR Apache-2.0"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[workspace]
